# mamba-from-scratch

./: .gitignore  ARCHITECTURE.md  COLAB_RUNBOOK.md  CONTRACTS.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_inference.py  benchmark_scan.py  decode_kernel.py  mamba2_ssd.py  parallel_scan.py  perplexity.py  plot_suite.py  roofline.py  suite.py  week2.py  week3_decode_kernel.py  week4.py
benchmarks/results/: decode_kernel.gpu.json  decode_kernel_pytorch.gpu.json  suite_v1.csv  (+19 more)
docs/: cross_engine_benchmarks.md  decode_kernel_profiling.md  week3_profiling.md  week5_benchmarks.md
kernels/: __init__.py  autotune.py  scan_decode.py  scan_fused.py  scan_naive.py
notebooks/: 01_selective_scan_derivation.ipynb  01_ssm_basics.ipynb  02_mamba130m_naive_generate.ipynb  02_selective_scan.ipynb  03_parallel_scan.ipynb  03_ssd_derivation.ipynb  04_mamba2_generate.ipynb  05_profiling.ipynb  07_inference_comparison.ipynb  08_colab_gpu_validation.ipynb
scripts/: colab_gpu_validation.py  create_notebooks.py  make_phase1_notebooks.py  make_placeholder_figures.py  make_reference_notebooks.py  official_parity.py  render_benchmark_figures.py  run_gpu_validation.py
tests/: test_api.py  test_backend_policy.py  test_block_mamba2.py  test_discretization.py  test_end_to_end.py  test_generate.py  test_kernel_parity.py  test_mamba_model_parity.py  test_naive_vs_reference.py  test_official_parity.py  test_parallel_scan.py  test_scan_decode_triton.py  test_scan_parallel.py  test_scan_ssd.py  test_selective_scan.py
(+17 files in other folders)
